--- a/src/style.scss
+++ b/src/style.scss
@@ -1,176 +1,222 @@
+//Imports
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Lato:wght@100&display=swap');
 
-* {
+//General Styles
+*{
   padding: 0;
   margin: 0;
   scrollbar-gutter: stable;
   a{
     text-decoration: none;
-    color: inherit
+    cursor: pointer;
+    color: inherit;
   }
+  ::-webkit-scrollbar-thumb {
+    background-color: #3498db; /* color of the thumb */
+    border-radius: 6px; /* roundness of the thumb corners */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #ecf0f1; /* color of the track */
+  }
+}
+
+//Mixins
+@mixin border-gradient{
+  background: linear-gradient(#212121, #212121) padding-box,
+  linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
+  border: 2px solid transparent;
+  border-radius: 16px;
+  box-sizing: border-box;
+  animation: gradient 5s ease infinite;
+}
+
+@mixin titles{
+  text-align: center;
+  font-size: 50px;
+  color: #e0e0e0;
+}
+
+@mixin grids($repeat, $space){
+  display: grid;
+  grid-template-columns: repeat($repeat, $space);
+  gap: 10px;
+  justify-content: center;
 }
 
 //Keyframes
 @keyframes gradient {
-  0% {
-    background-position: 0% 50%;
-  }
-
-  50% {
-    background-position: 100% 50%;
-  }
-
-  100% {
-    background-position: 0% 50%;
-  }
+  0% { background-position: 0% 50% }
+  50% { background-position: 100% 50% }
+  100% { background-position: 0% 50% }
 }
 
 //Styles
 body{
   background-color: #313131;
+  //-------------------------Encabezado-------------------------//
+  div{
+    margin-top: 20px;
+  }
   .navbar{
     color: whitesmoke;
-    background-color: #1d1d1d;
+    background-color: rgba(29, 29, 29, 0.8);
     display: flex;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    backdrop-filter: blur(8px);
+    z-index: 2;
     .logo{
       font-family: 'Dancing Script', cursive;
-      font-size: 40px;
+      font-size: 30px;
       margin-left: 140px;
       padding: 10px;
     }
     .barra{
-      align-self: center;
       display: flex;
+      align-items: center;
+      justify-content: center;
       a{
           list-style: none;
           padding-left: 50px;
-          font-size: 30px;
+          font-size: 20px;
       }
     }
   }
-  //Presentacion
+  //-------------------------Sobre mi-------------------------//
   .presentation{
+    display: flex;
     height: 100vh;
+    .description{
+      h2{
+        @include titles()
+      }
+    }
+    .foto{
+      img{
+        transform: rotate(1deg);
+        border-radius: 100%;
+        height: 300px;
+      }
+    }
   }
-  //Conocimiento
+  //-------------------------Conocimiento-------------------------//
   .knowledge{
     height: 100vh;
+    h2{
+      @include titles()
+    }
+    .imagesKnowledge{
+      @include grids(7, 50px);
+      img{
+        height: 50px;
+        width: 50px;
+        padding: 20px;
+        margin: auto;
+      }
+    }
   }
-  //Proyecto
+  //-------------------------Proyecto-------------------------//
   .project{
     height: 100vh;
-    .flip-card {
-      background-color: transparent;
-      width: 245px;
-      height: 270px;
-      perspective: 1000px;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    h2{
+      @include titles()
     }
-    
-    .flip-card-inner {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      text-align: center;
-      transition: transform 0.6s;
-      transform-style: preserve-3d;
+    .gridCard{
+      @include grids(5, 250px);
+      .flip-card {
+        background-color: transparent;
+        width: 235px;
+        height: 250px;
+        perspective: 1000px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
+      .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+      }
+      .flip-card-front {
+        @include border-gradient();
+        font-family: inherit;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        background-size: 200% 100%;
+      }
+      .flip-card-front, .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        padding: 5px;
+        border-radius: 2em;
+        backface-visibility: hidden;
+      }
+      .profileVideo {
+        background-color: blue;
+        height: 120px;
+      }
+      .pfp {
+        border-radius: 35em;
+        fill: #c143da;
+      }
+      .name {
+        margin-top: 15px;
+        font-size: 27px;
+        color: #c143da;
+        font-weight: bold;
+      }
+      .flip-card-back {
+        @include border-gradient();
+        transform: rotateY(180deg);
+        padding: 11px;
+      }
+      .description {
+        margin-top: 10px;
+        font-size: 14px;
+        letter-spacing: 1px;
+        color: white
+      }
+      .socialBar {
+        background-color: transparent;
+        border-radius: 3em;
+        width: 90%;
+        padding: 14px;
+        margin-top: 11px;
+        margin-left: 10px;
+        word-spacing: 24px;
+        color: white;
+        img {
+          transition: 0.4s;
+          width: 30px;
+          height: 30px;
+          color: #c143da
+        }
+        img:hover {
+          color: white;
+        }
+      }
+      
+      .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+      }    
     }
-    
-    
-    .flip-card-front {
-      border: 4px solid #c143da;
-      background: linear-gradient(#212121, #212121) padding-box,
-      linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
-      border: 2px solid transparent;
-      font-family: inherit;
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-      box-sizing: border-box;
-      border-radius: 16px;
-      background-size: 200% 100%;
-      animation: gradient 5s ease infinite;
-    }
-    .flip-card-front, .flip-card-back {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      padding: 5px;
-      border-radius: 2em;
-      backface-visibility: hidden;
-    }
-    
-    .profile-image {
-      background-color: transparent;
-      border: none;
-      margin-top: 15px;
-      border-radius: 5em;
-      width: 120px;
-      height: 120px;
-      margin-left: 50px;
-    }
-    
-    .pfp {
-      border-radius: 35em;
-      fill: #c143da;
-    }
-    
-    .name {
-      margin-top: 15px;
-      font-size: 27px;
-      color: #c143da;
-      font-weight: bold;
-    }
-    
-    .flip-card-back {
-      background-color: #240d29;
-      border: 4px solid #c143da;
-      transform: rotateY(180deg);
-      padding: 11px;
-    }
-    
-    .description {
-      margin-top: 10px;
-      font-size: 14px;
-      letter-spacing: 1px;
-      color: white
-    }
-    
-    .socialbar {
-      background-color: transparent;
-      border-radius: 3em;
-      width: 90%;
-      padding: 14px;
-      margin-top: 11px;
-      margin-left: 10px;
-      word-spacing: 24px;
-      color: white;
-    }
-    
-    .socialbar svg {
-      transition: 0.4s;
-      width: 20px;
-      height: 20px;
-      color: #c143da
-    }
-    
-    .socialbar svg:hover {
-      color: white;
-    }
-    
-    .flip-card:hover .flip-card-inner {
-      transform: rotateY(180deg);
-    }    
   }
-  //Conctact
+  //-------------------------Contactp-------------------------//
   .contact{
     height: 100vh;
+    padding-top: 50px;
+    .titleContact{
+      @include titles()
+    }
     .form-container {
       width: 800px;
       margin: auto;
-      background: linear-gradient(#212121, #212121) padding-box,
-                  linear-gradient(145deg, transparent 35%,#e81cff, #40c9ff) border-box;
-      border: 2px solid transparent;
+      @include border-gradient();
       padding: 32px 24px;
       font-size: 16px;
       font-family: inherit;
@@ -178,10 +224,7 @@ body{
       display: flex;
       flex-direction: column;
       gap: 20px;
-      box-sizing: border-box;
-      border-radius: 16px;
       background-size: 200% 100%;
-      animation: gradient 5s ease infinite;
       button:active {
         scale: 0.95;
       }
@@ -256,6 +299,7 @@ body{
       }
     }
   }
+  //-------------------------Pie de pagina-------------------------//
   .footer{
     background-color: #000000;
     color: whitesmoke;
