--- a/src/style.scss
+++ b/src/style.scss
@@ -73,13 +73,19 @@
   100% { background-position: 0% 50% }
 }
 
+@keyframes show {
+  from{
+    opacity: 0;
+    scale: 25%;
+  }
+  to{
+    opacity: 1;
+    scale: 100%
+  }
+}
 
 
 //Styles
-#root{
-
-  scroll-behavior: smooth;
-}
 html,
 body{
   background-color: #313131;
@@ -99,10 +105,8 @@ body{
   ::-webkit-scrollbar-track{
     background-color: #313131;
   }
-  .container{
+  #root{
     scroll-behavior: smooth;
-    width: 100%;
-    height: 100%;
     scroll-snap-type: y mandatory;
     //-------------------------Encabezado-------------------------//
     .navbar{
@@ -192,15 +196,23 @@ body{
         width: max-content;
         margin: auto;
         margin-top: 6%;
-        @include grids(7, 90px);
+        @include grids(7, 110px);
         img{
-          height: 50px;
-          width: 50px;
+          height: 70px;
+          width: 70px;
           margin: 20%;
+          view-timeline-name: --image;
+          view-timeline-axis: block;
+        
+          animation-timeline: --image;
+          animation-name: show;
+        
+          animation-range: entry 25% cover 30%;
+          animation-fill-mode: both;
         }
-        img:nth-child(12),
-        img:nth-child(16) {
-          background-color: rgba(0, 0, 0, 0.2);
+        img:nth-child(7),
+        img:nth-child(15) {
+          background-color: rgba(0, 0, 0, 0.25);
           border-radius: 50%;
           backdrop-filter: blur(0.3px)
         }
@@ -221,7 +233,6 @@ body{
           perspective: 1000px;
           font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
           .flip-card-inner {
-            position: relative;
             width: 100%;
             height: 98%;
             text-align: center;
@@ -408,5 +419,4 @@ body{
       }
     }
   }
-
 }
