--- a/src/style.scss
+++ b/src/style.scss
@@ -44,10 +44,10 @@
 
 @mixin titles{
   text-align: center;
-  font-size: 50px;
+  font-size: 70px;
   color: #e0e0e0;
-  margin-top: 7%;
-  margin-bottom: 2.5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 }
 
@@ -63,6 +63,18 @@
   width: 100vw;
   height: 100vh;
   z-index: 1;
+}
+
+@mixin circleImg{
+  background-color: rgba(29, 29, 29, 0.2);
+  border-radius: 50%;
+  backdrop-filter: blur(0px);
+  box-shadow: 0 0 10px #b425d1, 0 0 20px #c58bd1, 0 0 30px #bf1edf;
+}
+
+@mixin imgProfile($w, $trX, $trY){
+  width: $w;
+  transform: translate($trX, $trY);
 }
 
 //Keyframes
@@ -114,19 +126,20 @@ body{
       position: fixed;
       top: 0;
       width: 100%;
+      height: 5%;
       backdrop-filter: blur(8px);
       z-index: 2;
       .logo{
         font-family: 'Dancing Script', cursive;
         font-size: 200%;
         margin-left: 8%;
-        padding: 0.5%;
+        padding: 0%;
       }
       .barra{
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 14%;
+        margin-left: 13%;
         a{
             margin-left: 25px;
             padding: 14px 30px;
@@ -135,7 +148,7 @@ body{
       }
       .icons{
         margin: 0.5% 0 0 10%;
-        width: 10%;
+        width: 9%;
         a{
           img{
             width: 20%;
@@ -154,13 +167,14 @@ body{
       .presentation{
         display: flex;
         .description{
-          margin-top: 8%;
-          width: 60%;
+          margin-top: 10%;
+          width: 69%;
           h2{
             @include titles()
           }
           h4{
             color: #bebebe;
+            text-shadow: 0 0 2px #b8b8b8, 0 0 4px #b8b8b8, 0 0 6px #000000, 0 0 8px #000000;
             margin-left: 10%;
             font-size: 40px;
           }
@@ -173,15 +187,59 @@ body{
           }
         }
         .photo{
-          padding: 3%;
+          padding-top: 30vh;
+          height: 100vh;
           img{
-            margin-top: 40%;
-            background-color: rgba(29, 29, 29, 0.2);
+            @include circleImg();
+            margin: 1%;
+          }
+          img:nth-child(1){
+            @include imgProfile(100px, 160px, -250px);
+            height: 100px;
+          }
+          img:nth-child(2){
+            @include imgProfile(100px, 0px, -50px)
+          }
+          img:nth-child(3){
             transform: rotate(1deg);
-            border-radius: 50%;
-            height: 45%;
-            backdrop-filter: blur(0px);
-            box-shadow: 0 0 10px #b425d1, 0 0 20px #c58bd1, 0 0 30px #bf1edf;
+            @include imgProfile(350px, 0px, 0px)
+          }
+          img:nth-child(4){
+            @include imgProfile(100px, -40px, -270px);
+            height: 100px;
+          }
+          img:nth-child(5){
+            @include imgProfile(100px, -140px, -20px);
+            height: 100px
+          }
+          img:nth-child(6){
+            @include imgProfile(100px, -440px, 120px);
+            height: 100px;
+          }
+          img:nth-child(7){
+            @include imgProfile(90px, 380px, -500px)
+          }
+          img:nth-child(8){
+            @include imgProfile(90px, 100px, -10px)
+          }
+          img:nth-child(9){
+            @include imgProfile(70px, 330px, 20px)
+          }
+          img:nth-child(10){
+            @include imgProfile(70px, -90px, -540px)
+          }
+          img:nth-child(11){
+            @include imgProfile(60px, 280px, -280px)
+          }
+          img:nth-child(12){
+            @include imgProfile(50px, -420px, -300px)
+          }
+          img:nth-child(13){
+            @include imgProfile(50px, -20px, -560px);
+            height: 50px;
+          }
+          img:nth-child(14){
+            @include imgProfile(50px, -280px, 70px)
           }
         }
       }
@@ -225,7 +283,7 @@ body{
         @include titles()
       }
       .gridCard{
-        @include grids(3, 250px);
+        @include grids(3, 280px);
         .flip-card {
           background-color: transparent;
           width: 235px;
@@ -370,7 +428,7 @@ body{
           gap: 2px;
           label {
             display: block;
-            margin-bottom: 5px;
+            margin: 7px 0 7px 10px;
             color: #717171;
             font-weight: 600;
             font-size: 18px;
@@ -382,6 +440,7 @@ body{
             color: #fff;
             font-family: inherit;
             background-color: transparent;
+            font-size: 17px;
             border: 1px solid #414141;
           }
           textarea {
@@ -394,6 +453,7 @@ body{
             border: 1px solid #414141;
             background-color: transparent;
             font-family: inherit;
+            font-size: 17px;
           }
           input::placeholder {
             opacity: 0.5;
@@ -441,6 +501,10 @@ body{
         padding-top: 20px;
         a{
           color: rgb(179, 179, 179);
+          transition: color 0.6s ease, filter 0.6s ease;
+          &:hover{
+            color: rgba(255,255,255,0.9)
+          }
         }
       }
     }
