--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -99,19 +99,9 @@ body{
   background-color: #313131;
   width: 100vw;
   height: 100vh;
-  overflow-y: initial;
+  overflow-y: auto;
   ::-webkit-scrollbar {
-    width: 16px;
-  }
-  ::-webkit-scrollbar-thumb {
-    height: 56px;
-    border-radius: 8px;
-    border: 3px solid transparent;
-    background-clip: content-box;
-    background-color: hsl(0,0%,67%)
-  }
-  ::-webkit-scrollbar-track{
-    background-color: #313131;
+    width: 0;
   }
   #root{
     scroll-snap-type: y mandatory;
@@ -235,9 +225,6 @@ body{
             @include imgProfile(50px, -20px, -560px);
             height: 50px;
           }
-          img:nth-child(14){
-            @include imgProfile(50px, -280px, 70px)
-          }
         }
       }
     }
@@ -249,7 +236,7 @@ body{
         @include titles();
         margin-bottom: 3%;
       }
-      .cards{
+      .skills{
         @include grids(3, 255px);
         gap: 5%;
         .card{
@@ -302,8 +289,7 @@ body{
             transition: transform 0.6s;
             transform-style: preserve-3d;
             overflow: initial;
-            .flip-card-front, 
-            .flip-card-back {
+            .flip-card-front {
               position: absolute;
               width: 100%;
               height: 100%;
@@ -317,7 +303,7 @@ body{
               display: flex;
               flex-direction: column;
               background-size: 200% 100%;
-              .profileVideo {
+              .profileMedia {
                 background-color: rgb(51, 51, 56);
                 border-radius: 4%;
                 height: 170px;
@@ -345,57 +331,6 @@ body{
                   margin: 0px 0px 0px 6px;
                 }
               }
-            }
-            .flip-card-back {
-              @include border-gradient();
-              transform: rotateY(180deg);
-              padding: 11px;
-              .description {
-                .text {
-                  margin-top: 10px;
-                  font-size: 14px;
-                  letter-spacing: 1px;
-                  color: white
-                }
-                .page {
-                  padding: 11px;
-                  color: white;
-                  position: fixed;
-                  bottom: 0;
-                  left: 0;
-                  right: 0;
-                  justify-content: center;
-                  align-items: center;
-                  #github{
-                    img{
-                      transition: 0.3s;
-                      width: 35px;
-                      height: 35px;
-                      margin-bottom: 5px;
-                    }
-                  }
-                  #link {
-                    img{
-                      transition: 0.3s;
-                      width: 45px;
-                      height: 45px;
-                    }
-                  }
-                  img:hover {
-                    transform: scale(1.2);
-                  }
-                }
-              }
-            }
-          }
-          &:hover  {
-            .flip-card-inner {
-              transform: rotateY(180deg);
-            }
-          }
-          &:not(:has(.flip-card-back)) {
-            .flip-card-inner {
-              transform: none;
             }
           }
         }
